2003-08-01  Theodore A. Roth  <troth@openavr.org>

	* avrdude.1: Document the -q option.
	* doc/avrdude.texi: Document the -q option.
	Fix some typos left over from pasting in man output.

2003-07-30  Brian S. Dean  <bsd@bsdhome.com>

	* main.c: Add elapsed time information to the new progress bar.

2003-07-29  Theodore A. Roth  <troth@openavr.org>

	* avr.c:
	* avr.h:
	* avr910.c:
	* main.c:
	* stk500.c:
	New progress reporting implementation.

2003-07-24  Joerg Wunsch  <j@uriah.heep.sax.de>

	* avrdude.1:
	* doc/avrdude.texi:
	* pgm.c:
	* pgm.h:
	* stk500.c:
	* stk500_private.h:
	* term.c: Add support for displaying and setting the various
	operational parameters of the STK500 (Vtarget, Varef, clock).

2003-05-13  Theodore A. Roth  <troth@openavr.org>

	* avr910.c (avr910_paged_write_flash): Add code to send the 'm'
	command ("issue page write" cmd) for each page.

2003-05-13  Theodore A. Roth  <troth@openavr.org>

	* avrdude.conf.in: Add pagel and bs2 entries for at90s1200 device.

2003-05-13  Theodore A. Roth  <troth@openavr.org>

	* doc/TODO: Add note about avr910 device codes.

2003-05-04  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Check for ncurses library (since it can be a
	replacement for termcap).

2003-05-02  Theodore A. Roth  <troth@openavr.org>

	* avrdude.conf.in: Add avr decodes for devices known in avr910
	firmware version 2.3.
	Add missing stk500 devocde for 2343.

2003-04-23  Eric B. Weddington  <eric@ecentral.com>

	* fileio.c: Fix for bug #3293. Set correct open mode for raw format
	for Windows.

2003-04-18  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Add cvs suffix back to version.
	* doc/TODO: Add a few items.

2003-04-18

	* AVRDUDE 4.1.0 has been released (cvs release tag is "release_4_1_0").

2003-04-17  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Set version to 4.1.0.
	* doc/avrdude.texi: Add note about avr910 programmer type.

2003-04-17  Eric B. Weddington  <eric@ecentral.com>
