@@ -23,7 +23,9 @@
  * Posix serial interface for avrdude.
  */
 
+#include <ctype.h>
 #include <stdio.h>
+#include <stdlib.h>
 #include <string.h>
 #include <errno.h>
 #include <sys/types.h>
